--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -50,7 +50,7 @@
     <p class="card-text"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;<%= job.user.name %></p>
     <% if current_user %>
       <% if !current_user.company %>
-        <button style="float:right; margin-left: 10px" onclick="Apply()" class="btn btn-primary">Apply</button>
+        <button style="float:right; margin-left: 10px" onclick="Apply('<%= job.id %>')" class="btn btn-primary">Apply</button>
       <% end %>
     <% end %>
     <%= link_to 'Details', job, class:'btn btn-dark text-white', style:"float:right" %>
@@ -59,8 +59,8 @@
 <% end %>
 
 <script>
-  function Apply(event) {
-    fetch("/apply").then(response => response.json()).then(result => {
+  function Apply(_id) {
+    fetch(`/apply?id=${_id}`).then(response => response.json()).then(result => {
       console.log(result)
     })
   }
