area & location refrences working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       background-attachment: fixed;
       background-size: 100% 100%;
       background-repeat: no-repeat;
+      overflow-x: hidden;
     }
     h1 {
       font-family: font-family: 'Rubik', sans-serif !important;
