--- a/app/views/jobs/_applicatns.html.erb
+++ b/app/views/jobs/_applicatns.html.erb
@@ -1,4 +1,4 @@
-<% if @applicants.length == 0 %>
+<% if @applicants.length > 0 %>
     <table class="table" style="border-radius: 10px; width: calc(100vw - 450px);">
     <thead class="thead-dark">
         <tr>
@@ -8,12 +8,11 @@
         </tr>
     </thead>
     <tbody style="background: #eeeeee99">
-        <% @applicants.each do |applicant| %>
+        <% @applicants.each_with_index do |applicant, index| %>
             <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <th scope="row"><%= index + 1 %></th>
+                <td><%= applicant.users_id %></td>
+                <td><%= applicant.users_id %></td>
             </tr>
         <% end %>
     </tbody>
