--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -139,7 +139,7 @@
       padding-right: 20px;
     }
     .nav-side-menu li:hover {
-        box-shadow: 0 6px 3px -3px #eee;
+        background: #4a4a4a77;
         -webkit-transition: all .1s ease;
         -moz-transition: all .1s ease;
         -o-transition: all .1s ease;
