job applications done

--- a/app/views/jobs/_applicatns.html.erb
+++ b/app/views/jobs/_applicatns.html.erb
@@ -5,7 +5,7 @@
     <thead class="thead-dark">
         <tr>
         <th scope="col">#</th>
-        <th scope="col">Ime & Priimek</th>
+        <th scope="col">Full name</th>
         <th scope="col">Gmail</th>
         <th scope="col">Date</th>
         </tr>
