file upload & layout changes

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -35,7 +35,7 @@
 
         <div class="form-group">
             <%= form.label :"Upload Image" %>
-            <input type="file" class="form-control-file">
+            <%= form.file_field :attachment %>
         </div>
 
         <div class="actions">
