--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,8 @@
     .nav-side-menu li {
       list-style: none;
       padding: 10px;
-      padding-left: 10px !important;
+      padding-left: 30px !important;
+      border-bottom: 1px solid white;
       margin: 0px;
       font-size: 19px;
       line-height: 35px;
