--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,61 +1,33 @@
 <p id="notice"><%= notice %></p>
 
-
-  <div id="carouselExampleControls" style="float:left; width: 60%" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Third slide">
+<div class="card mb-3" >
+  <div class="row no-gutters">
+    <div class="col-md-4">
+        <%= image_tag @job.attachment, 
+            :style => "height: 450px; width: 450px; object-fit: cover;", 
+            :onerror => "this.src='https://mobileappszone.com/wp-content/uploads/2019/10/software-developer.jpg'" 
+        %>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><%= @job.title %></h5>
+        <p class="card-text"><%= @job.body %></p>
+        <hr/>
+        <i class="fa fa-user" aria-hidden="true"></i> Owner: <b><%= @job.user.name %></b><br/>
+        <i class="fa fa-calendar-o" aria-hidden="true"></i> Upload: <b><%= @job.created_at.strftime('%m/%d/%Y') %></b><br/>
+        <i class="fa fa-calendar-o" aria-hidden="true"></i> Updated: <b><%= @job.updated_at.strftime('%m/%d/%Y') %></b><br/>
+        <i class="fa fa-map-marker" aria-hidden="true"></i> Location: <b><%= @job.location.title + " " + @job.location.postcode  %></b><br/>
+        <i class="fa fa-briefcase" aria-hidden="true"></i> Area of experties: <b><%= @job.area.title %></b><br/>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-
-  <div style="float: right; margin-left: 5px: width: 40%">
-  <p>
-    <strong>User:</strong>
-    <%= @job.user.name %>
-  </p>
-
-  <p>
-    <strong>Craeted:</strong>
-    <%= @job.created_at %>
-  </p>
-
-  <p>
-    <strong>Updated:</strong>
-    <%= @job.updated_at %>
-  </p>
+</div>
 
 
-  <p>
-    <strong>Title:</strong>
-    <%= @job.title %>
-  </p>
-
-  <p>
-    <strong>Body:</strong>
-    <%= @job.body %>
-  </p>
-
-  </div>
-<hr style="clear: both" />
-
-<div class="btn-group" role="group" aria-label="Basic example">
-  <%= link_to 'Edit', edit_job_path(@job), class:"btn btn-secondary text-white" %>
-  <%= link_to 'Back', jobs_path, class:"btn btn-danger text-white" %>
+<div class="btn-group" role="group">
+    <%= link_to(jobs_path, class:"btn btn-dark text-white") do %>
+        <i class="fa fa-backward" aria-hidden="true"></i> Back
+    <% end %>
 </div>
 
 
