--- a/app/views/base/_company.html.erb
+++ b/app/views/base/_company.html.erb
@@ -10,11 +10,22 @@
 <p id="notice"><%= notice %></p>
 
 <% @jobs.each do |job| %>
-<div class="card cstm-card" style="width: 30%; float: left; margin: 5px;">
-  <img src="https://i.imgur.com/vCTar9J.jpg" class="card-img-top" alt="...">
+<div class="card cstm-card" style="width: 30%; float: left; margin: 7px;">
+    <%= image_tag job.attachment,
+        :class => "card-img-top",
+        :style => "height: 13vw; object-fit: cover;", 
+        :onerror => "this.src='https://mobileappszone.com/wp-content/uploads/2019/10/software-developer.jpg'" 
+    %>
   <div class="card-body">
     <h5 class="card-title"><%= job.title %></h5>
     <p class="card-text" style="white-space: nowrap;"><%= job.body[0..35] %><%= job.body.length > 35 ? '...' : '' %></p>
+    <hr style="border-top: 1px solid #444;" />
+    <p class="card-text">
+        <i class="fa fa-calendar-o" aria-hidden="true"></i> Upload: <b><%= job.created_at.strftime('%m/%d/%Y') %></b><br/>
+        <i class="fa fa-calendar-o" aria-hidden="true"></i> Updated: <b><%= job.updated_at.strftime('%m/%d/%Y') %></b><br/>
+        <i class="fa fa-map-marker" aria-hidden="true"></i> Location: <b><%= job.location.title + " " + job.location.postcode  %></b><br/>
+        <i class="fa fa-briefcase" aria-hidden="true"></i> Area of experties: <b><%= job.area.title %></b><br/>
+    </p>
     <hr style="border-top: 1px solid #444;" />
     <button style="float:right; margin-left: 10px" onclick="window.location = 'jobs/applicatns/<%= job.id %>'" class="btn btn-primary">Applicatns</button>
     <%= link_to 'Edit', edit_job_path(job), class:'btn btn-primary text-white' %>
