--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -18,6 +18,7 @@
         <i class="fa fa-calendar-o" aria-hidden="true"></i> Updated: <b><%= @job.updated_at.strftime('%m/%d/%Y') %></b><br/>
         <i class="fa fa-map-marker" aria-hidden="true"></i> Location: <b><%= @job.location.title + " " + @job.location.postcode  %></b><br/>
         <i class="fa fa-briefcase" aria-hidden="true"></i> Area of experties: <b><%= @job.area.title %></b><br/>
+        <i class="fa fa-money" aria-hidden="true"></i> Salary estime: <b><%= @job.salary %>€</b>
       </div>
     </div>
   </div>
