--- a/app/views/base/_company.html.erb
+++ b/app/views/base/_company.html.erb
@@ -25,6 +25,7 @@
         <i class="fa fa-calendar-o" aria-hidden="true"></i> Updated: <b><%= job.updated_at.strftime('%m/%d/%Y') %></b><br/>
         <i class="fa fa-map-marker" aria-hidden="true"></i> Location: <b><%= job.location.title + " " + job.location.postcode  %></b><br/>
         <i class="fa fa-briefcase" aria-hidden="true"></i> Area of experties: <b><%= job.area.title %></b><br/>
+        <i class="fa fa-money" aria-hidden="true"></i> Salary estime: <b><%= job.salary %>€</b>
     </p>
     <hr style="border-top: 1px solid #444;" />
     <button style="float:right; margin-left: 10px" onclick="window.location = 'jobs/applicatns/<%= job.id %>'" class="btn btn-primary">Applicatns</button>
