--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -22,6 +22,10 @@
             <%= form.text_area :body, id: :job_body, class:"form-control" %>
         </div>
 
+        <div class="form-group field" style="width: 80%">
+            <%= form.label :"Salary per month" %>
+            <%= form.text_field :salary, id: :job_title, class:"form-control" %>
+        </div>
         
         <div class="form-group" style="width: 80%">
             <%= form.label :Area %>
