user profile route added && avatar && biography

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,16 @@
     <%= f.text_field :name, class:'form-control' %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :"Upload Avatar" %>
+    <%= f.file_field :avatar %>
+    </div>
+
+    <div class="form-group">
+    <%= f.label :"Upload Biography" %>
+    <%= f.file_field :biography %>
+    </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
