--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -129,7 +129,7 @@
         url = setUrlParameter(url, "s", salary ? salary : 0);
         url = setUrlParameter(url, "f", filter ? filter : "");
         url = setUrlParameter(url, "a", area ? area : "");
-        url = setUrlParameter(url, "l", location ? loaction : "");
+        url = setUrlParameter(url, "l", location ? location : "");
         url = setUrlParameter(url, "o", order ? order : "");
         url = setUrlParameter(url, "t", type ? type : "");
 
