--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -56,4 +56,5 @@
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "btn btn-danger" %></p>
 
+<button class="btn btn-dark" onclick="window.location='/profile/<%= current_user.id %>'">View Profile</button><br/>
 <%= link_to "Back", :back %>
