--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -80,3 +80,10 @@
         </div>
     <% end %>
 <% end %>
+
+<script>
+$("li").click(function() {
+  window.event.toElement.children[1].click();
+  return;
+});
+</script>
