--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -12,9 +12,12 @@
       </div>
     <% end %>
 
+      <%= hidden_field(:candidate, :job_id, :value => params[:id]) %>
+      <%= hidden_field(:candidate, :user_id, :value => current_user.id) %>
+
       <div class="form-group" style="width: 80%">
-          <%= form.label :"Job Experties" %>
-          <%= form.text_field :salary, id: :job_title, class:"form-control", :id => "txtarea" %>
+          <%= form.label :"Write some of your experience in this field!" %>
+          <%= form.text_area :expreties, class:"form-control", :id => "txtarea" %>
            <script>CKEDITOR.replace( 'txtarea' );</script>
       </div>
 
