--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_candidate_path(@candidate) %> |
-<%= link_to 'Back', candidates_path %>
+<div class="card mb-3">
+  <div class="row no-gutters">
+ 
+  </div>
+</div>
