--- a/app/views/jobs/_applicatns.html.erb
+++ b/app/views/jobs/_applicatns.html.erb
@@ -9,15 +9,23 @@
         <th scope="col">Full name</th>
         <th scope="col">Gmail</th>
         <th scope="col">Date</th>
+        <th scrope="col">biography</th>
         </tr>
     </thead>
     <tbody style="background: #eeeeee99">
         <% @candidates.each_with_index do |candidate, index| %>
             <tr onclick="window.location = '/profile/<%= candidate.user.id %>'">
-                <th scope="row"><%= index + 1 %></th>
+                <th scope="row"><buton onclick="winodw.location = `jobs/`">+</button></th>
                 <td><%= candidate.user.name %></td>
                 <td><%= candidate.user.email %></td>
                 <td><%= candidate.updated_at.strftime('%m/%d/%Y') %></td>
+                <td>
+                <% if candidate.user.biography.length > 1 %>
+                    <a href="<%= candidate.user.biography %>"><i class="fa fa-file-text" aria-hidden="true"></i> Download biography</a>
+                <% else %>
+                    User doens't have a biography!
+                <% end %>
+                </td>
             </tr>
         <% end %>
     </tbody>
