--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -93,7 +93,8 @@
 
 <script>
     function Apply(_id) {
-        fetch(`/apply?id=${_id}`).then(response => response.json()).then(result => {
+        winodw.location = `jobs/apply/${_id}`;
+        /*fetch(`/apply?id=${_id}`).then(response => response.json()).then(result => {
             if(result.success) {
                 swal("Succesfully applied for the job", ".....", "success").then(() => location.reload());
             } else {
@@ -104,7 +105,7 @@
                 }).then(() => location.reload());
             }
             
-        })
+        })*/
     }
     function filter() {
         let url = window.location.href + "?";
@@ -163,7 +164,7 @@
                 <hr style="border-top: 1px solid #444;" />
                 <% if current_user %>
                     <% if !current_user.company && !@applied.include?(job.id) %>
-                        <button style="float:right; margin-left: 10px" onclick="Apply('<%= job.id %>')" class="btn btn-primary">Apply</button>
+                        <button style="float:right; margin-left: 10px" onclick="window.location = `jobs/apply/${<%= job.id %>}`" class="btn btn-primary">Apply</button>
                     <% end %>
                     <% if @applied.include?(job.id) %>
                         <span style="color: #a44">Applied!</span>
